--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,21 @@ main {
   border: none;
   font-family: "Montserrat", sans-serif; }
 
+.business-card__save-pdf-button {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  padding: 0;
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-family: "Montserrat", sans-serif; }
+
+.business-card__control-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
 .business-card__info-item--faded span {
   opacity: 0; }
 
