--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ main {
 
 .business-card__language-selector {
   display: flex;
+  text-decoration: none;
   align-items: center;
   top: -25px;
   left: 5px; }
@@ -218,7 +219,7 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 .business-card__info-item--faded span {
@@ -314,7 +315,6 @@ main {
     width: calc(100% - 60px);
     padding: 40px 60px; }
   .business-card__language-selector {
-    margin-bottom: 10px;
     position: relative;
     top: 0; }
   .business-card__title-block {
@@ -357,6 +357,7 @@ main {
     background: white;
     color: black; }
   .business-card__title {
+    font-size: 36px;
     line-height: 1;
     margin-bottom: 10px; }
   .business-card__title-section {
