--- a/style.css
+++ b/style.css
@@ -7,25 +7,16 @@ body {
   color: #242424;
   font-weight: 400;
   background: #e3e3e3;
-  background: linear-gradient(47deg, #8a8a8a 0%, #f7f7f7 100%);
-  width: 100vw;
-  min-height: 100vh;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
+  background: linear-gradient(47deg, #bbbbbb 0%, #f7f7f7 100%);
 }
 
 .page-wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 1000px;
-  box-shadow: -30px 17px 68px -17px rgba(0, 0, 0, 0.33);
-  padding: 60px 60px;
+  width: 70%;
+  box-shadow: -30px 17px 68px -17px rgba(110, 110, 110, 0.33);
+  padding: 30px;
   background: white;
-  background: linear-gradient(53deg, whitesmoke 0%, white 100%);
 }
 
 .content-language--ru {
@@ -60,7 +51,7 @@ a {
 /* Header */
 
 header {
-  padding-bottom: 30px;
+  padding-bottom: 24px;
   border-bottom: 1px solid #c9c9c9;
   width: 100%;
   display: flex;
@@ -91,14 +82,15 @@ header {
   width: 100%;
   justify-content: space-between;
   align-items: baseline;
+  font-size: medium;
+  top: -25px;
+  left: 5px;
 }
 
 .controls__language-selector {
   display: flex;
   text-decoration: none;
   align-items: center;
-  top: -25px;
-  left: 5px;
 }
 
 .controls__language-button {
@@ -108,6 +100,10 @@ header {
   font-family: inherit;
   border: none;
   border-bottom: 1px solid transparent;
+}
+
+.controls__save-button {
+  font-size: smaller;
 }
 
 .controls__language-button--active {
@@ -143,7 +139,11 @@ header {
 
 main {
   display: flex;
-  padding-top: 30px;
+  padding-top: 24px;
+}
+
+.content__features-block {
+  margin-bottom: 30px;
 }
 
 .features {
@@ -151,24 +151,108 @@ main {
   margin-right: 50px;
 }
 
+.features__block-title {
+  margin-top: 0;
+  margin-bottom: 1em;
+}
+
+.list-item-title {
+  font-style: italic;
+}
+
+.features__block-list li {
+  margin-top: 0.2em;
+}
+
 .experience {
   flex-grow: 1;
   width: 70%;
 }
 
-.content__features-block-title {
-  font-size: 22px;
-  font-weight: 600;
-  display: block;
+.experience__job-item-summary {
+  margin-bottom: 1em;
+}
+
+.experience__job-item-title h4, .experience__education-item-title h4 {
+  margin-bottom: 0;
+}
+
+.experience__job ul {
+  list-style: disc;
+  padding-left: 4%;
   margin-top: 0;
-  margin-bottom: 10px;
 }
 
-.content__features-block {
-  margin-bottom: 30px;
+/* Responsive */
+
+@media (min-width: 1060px) {
+
+  body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
 }
 
-/* Footer */
+@media (max-width: 1060px) {
 
-footer {
+  body {
+    font-size: smaller;
+    margin: 0;
+  }
+
+  .page-wrapper {
+    width: inherit;
+  }
+
+  .title__name {
+    font-size: 48px;
+  }
+
+  .title__position {
+    font-size: 18px;
+  }
+
+  .experience, .features {
+    width: inherit;
+  }
+
+  main {
+    flex-direction: column-reverse;
+  }
+
+  .features__block-title {
+    margin-top: 1em;
+  }
+
+  .contacts {
+    padding-top: 1em
+  }
+
+  .pair {
+    display: flex;
+  }
+
+}
+
+@media (max-width: 640px) {
+
+  body {
+    font-size: small;
+  }
+
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .title__name {
+    font-size: 32px;
+  }
+
+  .title__position {
+    font-size: 16px;
+  }
+
 }
